[gd_scene load_steps=25 format=3 uid="uid://v7oxdodc6od"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_85cbg"]
[ext_resource type="Texture2D" uid="uid://jmlarxo7lw1" path="res://images/ui/UI_Wood_Button_Large_Lock_02a1.png" id="3_5jom4"]
[ext_resource type="Texture2D" uid="uid://cbf6bg7hyxagg" path="res://images/ui/UI_Wood_Button_Large_Lock_02a3.png" id="4_ee4xe"]
[ext_resource type="Texture2D" uid="uid://cu0enlqdej8e3" path="res://images/ui/UI_Wood_Button_Large_Lock_02a2.png" id="5_74m5a"]
[ext_resource type="Script" path="res://scripts/ui/event_button.gd" id="6_mh4o5"]
[ext_resource type="Texture2D" uid="uid://ntqfof625rr" path="res://images/ui/icon_sheet.png" id="7_sjnku"]
[ext_resource type="Script" path="res://scripts/ui/button_inventory.gd" id="8_dtp82"]
[ext_resource type="Texture2D" uid="uid://ct2ujn5b4taer" path="res://images/ui/finished_ui_and_redone.PNG" id="9_4olp2"]
[ext_resource type="Script" path="res://scripts/ui/weather_text.gd" id="9_k01oi"]
[ext_resource type="AudioStream" uid="uid://gfin2ky0e4f4" path="res://sounds/Button Confirm-2024-01-14-00.wav" id="9_psx5h"]
[ext_resource type="AudioStream" uid="uid://d0q1cdew41r68" path="res://sounds/Button Back-2024-01-14-00.wav" id="10_7l3f6"]
[ext_resource type="Texture2D" uid="uid://bcc7nnodvbk6c" path="res://images/ui/large_button_normal.png" id="10_c0yl7"]
[ext_resource type="PackedScene" uid="uid://deykccsuuvrdq" path="res://scenes/inventory_box.tscn" id="10_sevrw"]
[ext_resource type="Texture2D" uid="uid://petnjqf4dwwb" path="res://images/ui/large_button_pressed.png" id="11_lkfju"]
[ext_resource type="Texture2D" uid="uid://eol1wracjl4i" path="res://images/ui/large_button_hover.png" id="12_nqn7h"]

[sub_resource type="Theme" id="Theme_0q56n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7inah"]
atlas = ExtResource("7_sjnku")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_engbv"]
atlas = ExtResource("7_sjnku")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48sio"]
atlas = ExtResource("7_sjnku")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gmyrk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7inah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_engbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48sio")
}],
"loop": true,
"name": &"Weather",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyawy"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86k0x"]
atlas = ExtResource("7_sjnku")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edpu6"]
atlas = ExtResource("7_sjnku")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbvel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86k0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edpu6")
}],
"loop": true,
"name": &"Day_Night",
"speed": 5.0
}]

[node name="HUD" type="Node2D"]
script = ExtResource("1_85cbg")

[node name="RandomEvent" type="CanvasLayer" parent="."]
visible = false

[node name="HBoxPanel" type="HBoxContainer" parent="RandomEvent"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -658.0
offset_top = -371.0
offset_right = 658.0
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="RandomEvent/HBoxPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxEvent" type="HBoxContainer" parent="RandomEvent"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -134.0
offset_right = 212.0
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2

[node name="RandomEvent" type="NinePatchRect" parent="RandomEvent/HBoxEvent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource("9_4olp2")
region_rect = Rect2(380, 234, 248, 267)
patch_margin_left = 69
patch_margin_top = 100
patch_margin_right = 75
patch_margin_bottom = 107

[node name="HBoxEventButton" type="HBoxContainer" parent="RandomEvent"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -107.0
offset_right = 164.0
offset_bottom = -50.0
grow_vertical = 0

[node name="EventButton" type="TextureButton" parent="RandomEvent/HBoxEventButton"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture_normal = ExtResource("3_5jom4")
texture_pressed = ExtResource("4_ee4xe")
texture_hover = ExtResource("5_74m5a")
stretch_mode = 0
script = ExtResource("6_mh4o5")

[node name="EventLabel" type="Label" parent="RandomEvent/HBoxEventButton/EventButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 3.0
offset_right = 48.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Hide Event"
horizontal_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Resource" type="NinePatchRect" parent="UI"]
offset_top = -10.0
offset_right = 420.0
offset_bottom = 188.0
texture = ExtResource("9_4olp2")
region_rect = Rect2(28, 42, 334, 165)
metadata/_edit_lock_ = true

[node name="LabelWater" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 80.0
offset_top = 75.0
offset_right = 147.0
offset_bottom = 98.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Water:"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="LabelDirt" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 80.0
offset_top = 51.0
offset_right = 147.0
offset_bottom = 74.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dirt:"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="LabelProtein" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 80.0
offset_top = 105.0
offset_right = 147.0
offset_bottom = 128.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Protein:"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="LabelCalcium" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 80.0
offset_top = 132.0
offset_right = 147.0
offset_bottom = 155.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Calcium:"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="WaterCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 150.0
offset_top = 78.0
offset_right = 180.0
offset_bottom = 101.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="DirtCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 150.0
offset_top = 51.0
offset_right = 180.0
offset_bottom = 74.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="ProteinCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 150.0
offset_top = 105.0
offset_right = 180.0
offset_bottom = 128.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="CalciumCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 150.0
offset_top = 132.0
offset_right = 180.0
offset_bottom = 155.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="LabelPhosphorus" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 203.0
offset_top = 51.0
offset_right = 326.0
offset_bottom = 74.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Phosphorus: "
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="LabelPotassium" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 203.0
offset_top = 77.0
offset_right = 326.0
offset_bottom = 100.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Potassium: "
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="LabelCarbohydrates" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 203.0
offset_top = 105.0
offset_right = 326.0
offset_bottom = 128.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Carbohydrates: "
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="LabelLuciferin" type="Label" parent="UI/Resource"]
layout_mode = 2
offset_left = 203.0
offset_top = 132.0
offset_right = 326.0
offset_bottom = 155.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Luciferin: "
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="PhosphorusCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 330.0
offset_top = 51.0
offset_right = 360.0
offset_bottom = 74.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="PotassiumCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 330.0
offset_top = 77.0
offset_right = 360.0
offset_bottom = 100.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="CarbohydratesCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 330.0
offset_top = 105.0
offset_right = 360.0
offset_bottom = 128.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="LuciferinCount" type="Label" parent="UI/Resource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 330.0
offset_top = 132.0
offset_right = 360.0
offset_bottom = 155.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
metadata/_edit_lock_ = true

[node name="Effect" type="NinePatchRect" parent="UI"]
offset_left = 420.0
offset_top = -35.0
offset_right = 809.0
offset_bottom = 188.0
size_flags_horizontal = 3
texture = ExtResource("9_4olp2")
region_rect = Rect2(400, 0, 274, 210)
metadata/_edit_lock_ = true

[node name="LabelEffect" type="Label" parent="UI/Effect"]
layout_mode = 0
offset_left = 62.0
offset_top = 92.0
offset_right = 165.0
offset_bottom = 115.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Effect: XXX"
metadata/_edit_lock_ = true

[node name="LabelEffect2" type="Label" parent="UI/Effect"]
layout_mode = 0
offset_left = 62.0
offset_top = 112.0
offset_right = 172.0
offset_bottom = 135.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Effect: XXX"
metadata/_edit_lock_ = true

[node name="LabelEffect3" type="Label" parent="UI/Effect"]
layout_mode = 0
offset_left = 62.0
offset_top = 132.0
offset_right = 172.0
offset_bottom = 155.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Effect: XXX"
metadata/_edit_lock_ = true

[node name="LabelEffect4" type="Label" parent="UI/Effect"]
layout_mode = 0
offset_left = 62.0
offset_top = 152.0
offset_right = 172.0
offset_bottom = 175.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Effect: XXX"
metadata/_edit_lock_ = true

[node name="LabelPopulation" type="Label" parent="UI/Effect"]
layout_mode = 0
offset_left = 258.0
offset_top = 123.0
offset_right = 383.0
offset_bottom = 146.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Population:"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="PopulationCount" type="Label" parent="UI/Effect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 285.0
offset_top = 156.0
offset_right = 358.0
offset_bottom = 179.0
theme = SubResource("Theme_0q56n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "XXX"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Minimap" type="NinePatchRect" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -273.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
texture = ExtResource("9_4olp2")
region_rect = Rect2(961, 236, 248, 250)
metadata/_edit_lock_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI/Minimap"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -211.0
offset_right = 320.0
offset_bottom = 301.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.35, 0.35)

[node name="SubViewport" type="SubViewport" parent="UI/Minimap/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(550, 512)
render_target_update_mode = 4

[node name="WeatherHolder" type="NinePatchRect" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 150.0
grow_horizontal = 0
size_flags_horizontal = 3
texture = ExtResource("9_4olp2")
region_rect = Rect2(1112, 0, 151, 153)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="WeatherArea" type="Area2D" parent="UI/WeatherHolder"]
position = Vector2(126, 24)
scale = Vector2(2, 2)
script = ExtResource("9_k01oi")

[node name="WeatherSprite" type="AnimatedSprite2D" parent="UI/WeatherHolder/WeatherArea"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_gmyrk")
animation = &"Weather"
offset = Vector2(-6, 6)

[node name="CollisionWeather" type="CollisionShape2D" parent="UI/WeatherHolder/WeatherArea"]
position = Vector2(-6, 6)
shape = SubResource("RectangleShape2D_yyawy")
metadata/_edit_lock_ = true

[node name="NineWeather" parent="UI/WeatherHolder/WeatherArea" instance=ExtResource("10_sevrw")]
visible = false
offset_left = -145.0
offset_top = -4.0
offset_right = 188.0
offset_bottom = 233.0
scale = Vector2(0.2, 0.2)

[node name="LabelWeather" type="Label" parent="UI/WeatherHolder/WeatherArea/NineWeather"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 70.0
offset_top = 45.0
offset_right = 275.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.537255, 0.537255, 0.537255, 0.717647)
theme_override_font_sizes/font_size = 48
text = "Day: 100
Stormy"
metadata/_edit_lock_ = true

[node name="SunMoonMovement" type="Node2D" parent="UI/WeatherHolder"]
unique_name_in_owner = true
position = Vector2(150, 0)
rotation = -6.28319
metadata/_edit_lock_ = true

[node name="SunMoon" type="AnimatedSprite2D" parent="UI/WeatherHolder/SunMoonMovement"]
unique_name_in_owner = true
position = Vector2(0, 172)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_wbvel")
animation = &"Day_Night"
metadata/_edit_lock_ = true

[node name="Options" type="CanvasLayer" parent="."]
visible = false

[node name="HBoxPanel" type="HBoxContainer" parent="Options"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -658.0
offset_top = -371.0
offset_right = 658.0
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Options/HBoxPanel"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_lock_ = true

[node name="VBoxOptions" type="VBoxContainer" parent="Options"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="LabelBack" type="Label" parent="Options/VBoxOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonBack" type="TextureButton" parent="Options/VBoxOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("10_c0yl7")
texture_pressed = ExtResource("11_lkfju")
texture_hover = ExtResource("12_nqn7h")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="LabelMainMenu" type="Label" parent="Options/VBoxOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonMainMenu" type="TextureButton" parent="Options/VBoxOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("10_c0yl7")
texture_pressed = ExtResource("11_lkfju")
texture_hover = ExtResource("12_nqn7h")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="LabelQuit" type="Label" parent="Options/VBoxOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonQuit" type="TextureButton" parent="Options/VBoxOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("10_c0yl7")
texture_pressed = ExtResource("11_lkfju")
texture_hover = ExtResource("12_nqn7h")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="VBoxConfirm" type="VBoxContainer" parent="Options"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -79.0
offset_right = 128.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="LabelConfirmation" type="Label" parent="Options/VBoxConfirm"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Confirmation"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="HBoxConfirm" type="HBoxContainer" parent="Options/VBoxConfirm"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxConfirmYes" type="VBoxContainer" parent="Options/VBoxConfirm/HBoxConfirm"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_lock_ = true

[node name="LabelConfirm" type="Label" parent="Options/VBoxConfirm/HBoxConfirm/VBoxConfirmYes"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Yes"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonConfirm" type="TextureButton" parent="Options/VBoxConfirm/HBoxConfirm/VBoxConfirmYes"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("10_c0yl7")
texture_pressed = ExtResource("11_lkfju")
texture_hover = ExtResource("12_nqn7h")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="VBoxConfirmNo" type="VBoxContainer" parent="Options/VBoxConfirm/HBoxConfirm"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_lock_ = true

[node name="LabelDecline" type="Label" parent="Options/VBoxConfirm/HBoxConfirm/VBoxConfirmNo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "No"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonDecline" type="TextureButton" parent="Options/VBoxConfirm/HBoxConfirm/VBoxConfirmNo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("10_c0yl7")
texture_pressed = ExtResource("11_lkfju")
texture_hover = ExtResource("12_nqn7h")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Inventory" type="CanvasLayer" parent="."]
visible = false

[node name="HBoxContainerInventory" type="HBoxContainer" parent="Inventory"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -140.0
offset_right = 57.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonInventory" type="TextureButton" parent="Inventory/HBoxContainerInventory"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("3_5jom4")
texture_pressed = ExtResource("4_ee4xe")
texture_hover = ExtResource("5_74m5a")
stretch_mode = 0
script = ExtResource("8_dtp82")

[node name="LabelInventory" type="Label" parent="Inventory/HBoxContainerInventory/ButtonInventory"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 3.0
offset_right = 48.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Hide Event"
horizontal_alignment = 1

[node name="AudioConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_psx5h")

[node name="AudioBack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_7l3f6")

[connection signal="mouse_entered" from="UI/WeatherHolder/WeatherArea" to="UI/WeatherHolder/WeatherArea" method="_on_weather_mouse_entered"]
[connection signal="mouse_exited" from="UI/WeatherHolder/WeatherArea" to="UI/WeatherHolder/WeatherArea" method="_on_weather_mouse_exited"]
[connection signal="frame_changed" from="UI/WeatherHolder/SunMoonMovement/SunMoon" to="UI/WeatherHolder/WeatherArea" method="_on_sun_moon_frame_changed"]
[connection signal="pressed" from="Options/VBoxOptions/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="Options/VBoxOptions/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="Options/VBoxOptions/ButtonQuit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Options/VBoxConfirm/HBoxConfirm/VBoxConfirmYes/ButtonConfirm" to="." method="_on_button_confirm_pressed"]
[connection signal="pressed" from="Options/VBoxConfirm/HBoxConfirm/VBoxConfirmNo/ButtonDecline" to="." method="_on_button_decline_pressed"]
